@@ -1,0 +1,16 @@
+.\" RCSid $Id: epw2wea.1,v 1.1 2013/09/25 16:52:28 greg Exp $
+.TH EPW2WEA 08/07/13 RADIANCE
+.SH NAME
+epw2wea - weather file converter
+.SH SYNOPSIS
+.B epw2wea
+.B file_name.epw
+.B file_name.wea
+.SH DESCRIPTION
+.I epw2wea 
+transforms an EnergyPlus weather data (.epw) file into the DAYSIM weather file
+format, for use with the RADIANCE gendaymtx program.
+.SH AUTHOR
+Christoph Reinhart, Jason Turner
+.SH "SEE ALSO"
+gendaymtx(1)
